@@ -13,6 +13,8 @@ Changed in ATK 5.5.1
 
 Changes in ATK 5.5
 ------------------
++ Added atkMessageQueue for user notification messages, which can be shown
+  via the atkmessages plugin. [Patrick]
 + Added class atkMail for sending e-mails just like the normal mail function
   does, but with the ability to disable the sending of e-mails (and in the
   future send e-mails to other addresses etc.) for debugging purposes. [Peter]
